<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/top_rated"
        android:icon="@drawable/ic_top_rated"
        android:title="@string/top_rated_title"
        android:contentDescription="@string/description"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/popular"
        android:icon="@drawable/ic_popular"
        android:title="@string/popular_title"
        android:contentDescription="@string/description"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/now_playing"
        android:icon="@drawable/ic_now_playing"
        android:title="@string/now_playing_title"
        android:contentDescription="@string/description"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/upcoming_title"
        android:contentDescription="@string/description"
        app:showAsAction="ifRoom"/>

</menu>